<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/back_fragment_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/countdown_big_text_size"
        android:gravity="center"
        android:id="@+id/big_number_text_view"
        android:textColor="#ffffff"
        android:scaleY="@fraction/scale_factor"
        android:text="22"
        android:layout_above="@+id/small_number_text_view"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="00"
        android:textSize="@dimen/countdown_small_text_size"
        android:id="@+id/small_number_text_view"
        android:textAlignment="center"
        android:layout_gravity="center|bottom"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:id="@+id/pauseButton"
        android:src="@drawable/pause_overlay_icon"
        android:layout_marginBottom="67dp"
        android:contentDescription="Start/Pause Button"/>
</RelativeLayout>