<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="#000000">

    <RelativeLayout
        android:id="@+id/countdownPicker"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/round_rect_shape"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="10dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="2"
            android:id="@+id/minutes"
            android:textSize="100sp"
            android:typeface="sans"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/minutes"
            android:layout_alignParentEnd="true"
            android:paddingEnd="10sp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="15"
            android:id="@+id/seconds"
            android:textSize="50sp"
            android:typeface="sans"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="#ffffff"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:id="@+id/startButton"
        android:src="@drawable/play_overlay_icon"
        android:layout_alignParentBottom="true"
        android:contentDescription="Start Countdown Button"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
